# ZkCycleDetection

./: README.md
Zokrates/: 1input.json  4test.json  abi.json  out  out.r1cs  proof.json  proving.key  root.zok  verification.key  verifier.sol
arkworks-cycle/: .gitignore  Cargo.toml  proof
arkworks-cycle/benches/: benchmarking.xlsx  benchmarking_graphs.ipynb
arkworks-cycle/src/: alloc.rs  cmp.rs  graph_checks.rs  hash.rs  hash_new.rs  hash_test.rs  hashing.rs  helper.rs  main.rs  utils.rs
arkworks-cycle/src/graph_checks/: alloc.rs  cmp.rs  hash_test.rs  hashing.rs
arkworks-cycle/src/hashing/: hashing_lib.rs  hashing_utils.rs
