[package]
name = "sudoku-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-std = {version = "0.4"}
ark-bls12-381 = { version = "0.4" }

ark-r1cs-std = { version = "0.4" }
ark-snark = { version = "0.4" }
ark-relations = { version = "0.4" }
sha2 = "0.10.8"
ark-crypto-primitives = {version = "0.4.0", features = ["sponge"]}
anyhow = {version= "1.0.75"}
ark-ed-on-bls12-377 = {version = "0.4.0"}
ark-test-curves = {version = "0.4.2"}
tracing-subscriber = {version = "0.3.18"}
tracing = {version = "0.1.40"}
[dev-dependencies]
itertools = "0.10.1"
