[package]
name = "sudoku-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-bls12-381 = { version = "0.4" }
ark-r1cs-std = { version = "0.4" }
ark-snark = { version = "0.4" }
ark-relations = { version = "0.4" }

ark-groth16 = { version = "^0.4.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly-commit = { version = "^0.4.0", default-features = false }
ark-ed-on-bn254 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-poly = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4"}

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[dev-dependencies]
itertools = "0.10.1"
