[package]
name = "sudoku-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-bls12-381 = { version = "0.4" }
ark-std = { version = "^0.4.0", default-features = false}
ark-r1cs-std = { version = "0.4" }
ark-relations = { version = "0.4" }
ark-crypto-primitives = { version = "0.4", features = ["sponge"]}
ark-groth16 = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "0.4", features = ["derive"] }

[dev-dependencies]
itertools = "0.10.1"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }